--- a/src/forms/adminforms/TrotinetiForm.form
+++ b/src/forms/adminforms/TrotinetiForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="forms.mainFormUser">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="forms.adminforms.TrotinetiForm">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -24,12 +24,12 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="5723f" class="javax.swing.JButton" binding="buttonCancel">
+              <component id="5723f" class="javax.swing.JButton" binding="btnReturn">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Zavrsen rad"/>
+                  <text value="Vrati se na glavnu stranicu"/>
                 </properties>
               </component>
             </children>
@@ -44,28 +44,20 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="15f8" class="javax.swing.JLabel" binding="lblWelcome">
+          <vspacer id="a7296">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="13" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Dobrodosli!"/>
-            </properties>
-          </component>
-          <vspacer id="22369">
-            <constraints>
-              <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="3" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="16b0e" class="javax.swing.JButton" binding="btnSearchTrotinet">
+          <component id="2827d" class="javax.swing.JButton" binding="btnCreate">
             <constraints>
-              <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Pretrazi trotinet"/>
+              <text value="Kreiraj trotinet"/>
             </properties>
           </component>
-          <component id="dca9e" class="javax.swing.JLabel" binding="lblSearch">
+          <component id="bfdd4" class="javax.swing.JLabel" binding="lblSearch">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -73,11 +65,19 @@
               <text value="Izaberite trotinet"/>
             </properties>
           </component>
-          <component id="d7d16" class="javax.swing.JComboBox" binding="comboBoxSearch">
+          <component id="33799" class="javax.swing.JComboBox" binding="comboBoxTrotineti">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
+          </component>
+          <component id="83126" class="javax.swing.JButton" binding="btnSearch">
+            <constraints>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Pretrazi trotinete"/>
+            </properties>
           </component>
         </children>
       </grid>
