--- a/src/forms/adminforms/VoznjeForm.form
+++ b/src/forms/adminforms/VoznjeForm.form
@@ -57,7 +57,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Izaberi klijenta"/>
+              <text value="Unesi klijenta"/>
             </properties>
           </component>
           <component id="383e" class="javax.swing.JTextField" binding="txtSearch">
