--- a/src/forms/adminforms/KorisniciForm.form
+++ b/src/forms/adminforms/KorisniciForm.form
@@ -49,7 +49,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Kreiraj klijenta"/>
+              <text value="Kreiraj korisnika"/>
             </properties>
           </component>
           <component id="513a7" class="javax.swing.JLabel" binding="lblSearch">
@@ -73,7 +73,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Pretrazi klijente"/>
+              <text value="Pretrazi korisnika"/>
             </properties>
           </component>
         </children>
