--- a/src/forms/adminforms/VoznjeForm.form
+++ b/src/forms/adminforms/VoznjeForm.form
@@ -57,7 +57,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Unesi klijenta"/>
+              <text value="Unesi username korisnika"/>
             </properties>
           </component>
           <component id="383e" class="javax.swing.JTextField" binding="txtSearch">
@@ -73,7 +73,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Pretrazi klijenta"/>
+              <text value="Pretrazi korisnika"/>
             </properties>
           </component>
         </children>
