Kreiran table model za dodavanje voznje, razne izmene

--- a/src/forms/adminforms/KorisniciForm.form
+++ b/src/forms/adminforms/KorisniciForm.form
@@ -68,12 +68,12 @@
             </constraints>
             <properties/>
           </component>
-          <component id="49a6f" class="javax.swing.JButton" binding="btnSearch">
+          <component id="49a6f" class="javax.swing.JButton" binding="btnAllUsers">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Pretrazi korisnika"/>
+              <text value="Prikazi"/>
             </properties>
           </component>
         </children>
