--- a/src/forms/adminforms/VoznjeForm.form
+++ b/src/forms/adminforms/VoznjeForm.form
@@ -73,7 +73,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Pretrazi korisnika"/>
+              <text value="Pretrazi voznje po korisniku"/>
             </properties>
           </component>
         </children>
