--- a/src/forms/mainFormUser.form
+++ b/src/forms/mainFormUser.form
@@ -62,7 +62,7 @@
               <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Pretrazi trotinet"/>
+              <text value="Pretrazi"/>
             </properties>
           </component>
           <component id="dca9e" class="javax.swing.JLabel" binding="lblSearch">
@@ -73,11 +73,13 @@
               <text value="Izaberite trotinet"/>
             </properties>
           </component>
-          <component id="d7d16" class="javax.swing.JComboBox" binding="comboBoxSearch">
+          <component id="d7d16" class="javax.swing.JComboBox" binding="cmbTrotinet">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <model/>
+            </properties>
           </component>
         </children>
       </grid>
